--- a/pedidoHistorial.html
+++ b/pedidoHistorial.html
@@ -1,163 +1,141 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
     <link href='logo.ico' rel='shortcut icon' type='image/x-icon' />
-    <title>Detalles del pedidos</title>
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link href="vendor/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
-    <link href="vendor/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
-    <link href="vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
-    <link href="dist/css/sb-admin-2.css" rel="stylesheet">
-    <link href="vendor/morrisjs/morris.css" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/dragula.min.css">
+    <title>Detalles del pedido</title>
+    <link rel="stylesheet" type="text/css" href="css/jquery-ui.css">
+    <link rel="stylesheet" href="css/bootstrap4.min.css">
+    <!-- <link rel="stylesheet" href="css/bootstrap-theme.min.css"> -->
+    <link href="css/dataTables.bootstrap4.min.css" rel="stylesheet">
+    <link href="css/dataTables.responsive.css" rel="stylesheet">
+    <!-- <link href="vendor/metisMenu/metisMenu.min.css" rel="stylesheet"> -->
+    <!-- <link href="dist/css/sb-admin-2.css" rel="stylesheet"> -->
+    <link href="css/panel.css" rel="stylesheet">
+    <!-- <link href="vendor/morrisjs/morris.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="css/icon.css">
+    <link rel="stylesheet" href="dist/css/bootstrap-select.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker3.min.css">
     <link rel="stylesheet" href="css/bootstrap-datepicker3.standalone.css">
-    <link rel="stylesheet" href="css/bootstrap-select.min.css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-      <![endif]-->
+    <script defer src="js/fontawesome-all.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- <link href="vendor/metisMenu/metisMenu.min.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="css/buttons.bootstrap4.min.css">
   </head>
   <body>
-    <nav class="navbar">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">
-            <img style="max-width: 50px; margin-top: -7px;" src="logo.png"></img>
+    <!-- <nav class="navbar navbar-expand-lg navbar" style="background-color: rgb(255, 110, 2)"> -->
+        <nav class="navbar navbar-expand-lg navbar" style="background: url(img/FONDO.jpg) no-repeat; background-size: cover;">
+      <a class="navbar-brand" href="#">
+        <img src="logo.png" width="50" height="33" class="d-inline-block align-top" alt=""> Sistema de pedidos
+      </a>
+      <a class="navbar-brand" href="panel.html">
+        <span class="navbar-text material-icons" data-toggle="tooltip" data-placement="bottom" title="Volver al panel">dvr</span>
+      </a>
+      <div id="campana" onclick="mostrarNotificaciones()" class="navbar-brand dropdown" data-toggle="tooltip" data-placement="bottom"
+        title="Notificaciones">
+        <a class="links-panel dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <span class="far fa-bell"></span>
+          <span id="spanNotificaciones" style="display: none;" class="badge badge-pill badge-danger"></span>
+        </a>
+        <div id="contenedorNotificaciones" class="dropdown-menu dropdown-alerts" aria-labelledby="dropdownMenuButton">
+    
+        </div>
+      </div>
+      <a href="" class="navbar-brand" id="btnPerfil">
+        <img src="http://lorempixel.com/25/25/" alt="..." class="rounded-circle" data-toggle="tooltip" data-placement="bottom" title="Perfil">
+      </a>
+      <div class="navbar-brand dropdown" data-toggle="tooltip" data-placement="bottom" title="Cerrar sesión">
+        <a class="links-panel dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-sign-out-alt"></i>
+        </a>
+        <div class="dropdown-menu dropdown-alerts" aria-labelledby="dropdownMenuButton">
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" onclick="logout()">
+            <span class="fas fa-power-off"></span> Cerrar sesión
           </a>
-          <a class="navbar-brand" href="#">Sistema de pedidos</a>
-          <a class="navbar-brand" href="panel.html">
-            <span class="material-icons no-padding" data-toggle="tooltip" data-placement="bottom" title="Volver al panel">dvr</span>
-          </a>
-          <div id="campana" onclick="mostrarNotificaciones()" class="navbar-brand dropdown">
-            <a class="links-panel" class="dropdown-toggle" data-toggle="dropdown" href="#">
-              <i class="textnavbar fa fa-bell-o" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Notificaciones"></i>
-              <span id="spanNotificaciones" style="background-color: red; display: none;" class="badge"></span>
-              <i class="fa fa-caret-down"></i>
-            </a>
-            <ul id="contenedorNotificaciones" class="dropdown-menu dropdown-alerts">
-
-            </ul>
-          </div>
-          <a href="" class="navbar-brand" id="btnPerfil">
-            <img src="http://lorempixel.com/25/25/" alt="..." class="img-circle" data-toggle="tooltip" data-placement="bottom" title="Perfil">
-          </a>
-          <div class="navbar-brand dropdown">
-            <a class="links-panel dropdown-toggle" data-toggle="dropdown" href="#">
-              <i class="fa fa-sign-out" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Cerrar sesión"></i>
-              <i class="fa fa-caret-down"></i>
-            </a>
-            <ul class="dropdown-menu dropdown-alerts">
-              <li class="divider"></li>
-              <li>
-                <a onclick="logout()">
-                  <span class="glyphicon glyphicon-off"></span> Cerrar sesión</a>
-              </li>
-            </ul>
-          </div>
         </div>
       </div>
     </nav>
-    <div id="wrapper">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12">
-            <br>
-            <!--<div class="loader"></div>-->
-            <div id="panel" class="panel panel-primary">
-              <div class="panel-heading">
-                <span id="numPedido" style="font-size: 30px; font-style: italic;" class="panel-title"></span>
-                <span id="fechaPedido" class="pull-right" style="font-size: 20px;">
-                  <!--Recibido Martes 13 de abril-->
-                </span>
-              </div>
-              <div class="panel-body" id="contenedorDatos">
-                <label id="tienda" for="">Tienda: </label>
-                <p id="coordinador">Coordinador(a):</p>
-                <p class="lead">
-                  <small>Productos de este pedido:</small>
-                </p>
-                <div class="form-group">
-                  <label class="lead">
-                    <small>Cantidad: </small>
-                    <span id="cantidad" class="badge"></span>
-                  </label>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-lg-12 col-md-12 col-sm-12 mt-5">
+          <div class="card">
+            <div class="card-body">
+              <!--<div class="loader"></div>-->
+              <div id="panel" class="card">
+                <div class="card-header bg-primary" style="color: white;">
+                  <span id="clavePedido" style="font-size: 30px; font-style: italic;" class="panel-title"></span>
+                  <span id="fechaPedido" class="float-md-right" style="font-size: 20px;">
+                    <!--Recibido Martes 13 de abril-->
+                  </span>
                 </div>
+                <div class="card-body" id="contenedorDatos">
+                  <div class="row">
+                    <div class="col-sm-4">
+                      <div class="card border">
+                        <div class="card-header">
+                          Id del pedido: <span id="keyPedido" class="text-muted"></span>
+                        </div>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item">Tienda: <span id="tienda" class="text-muted"></span></li>
+                          <li class="list-group-item">Coordinador(a): <span id="coordinador" class="text-muted"></span></li>
+                          <li class="list-group-item d-flex justify-content-between align-items-center">Productos de este pedido: <p class="text-muted">Cantidad: <span id="cantidad" class="badge badge-pill badge-danger"></span></p></li>
+                        </ul>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <table id="productos" width="100%" cellspacing="0" class="table table-sm table-bordered table-striped table-hover">
+                  <!-- <caption>Productos de este pedido:</caption> -->
+                  <thead id="theadProductos">
+                    <tr>
+                      <th class="text-center">Clave</th>
+                      <th class="text-center">Descripción</th>
+                      <th class="text-center">Pedido Pz</th>
+                      <th class="text-center">Degustación</th>
+                      <th class="text-center">Cambio físico</th>
+                      <th class="text-center">Total Pz</th>
+                      <th class="text-center">Total Kg</th>
+                      <th class="text-center">Precio unit.</th>
+                      <th class="text-center">Unidad</th>
+                    </tr>
+                  </thead>
+                  <tbody id="tbodyProductos">
+        
+                  </tbody>
+                </table>
               </div>
-              <table id="productos" class="table table-condensed table-bordered table-striped table-hover">
-                <!--<caption>Productos de este pedido:</caption>-->
-                <thead id="theadProductos">
-                  <tr>
-                    <th class="text-center">Clave</th>
-                    <th class="text-center">Descripción</th>
-                    <th class="text-center">Pedido Pz</th>
-                    <th class="text-center">Degustación</th>
-                    <th class="text-center">Cambio físico</th>
-                    <th class="text-center">Total Pz</th>
-                    <th class="text-center">Total Kg</th>
-                    <th class="text-center">Precio unit.</th>
-                    <th class="text-center">Unidad</th>
-                  </tr>
-                </thead>
-                <tbody id="tbodyProductos">
-
-                </tbody>
-              </table>
+              <button id="Imprimir" onclick="generarPDF();" class="btn btn-lg btn-danger mt-3">
+                <i class="fas fa-print" aria-hidden="true"></i> Imprimir</button>
             </div>
-            <button id="Imprimir" onclick="generarPDF();" class="btn btn-lg btn-danger">
-              <i class="fa fa-print" aria-hidden="true"></i> Imprimir</button>
           </div>
-          <!-- /.col-lg-12 -->
         </div>
-        <!-- /.row -->
       </div>
     </div>
-    <!-- /#wrapper -->
-    <!-- jQuery -->
-    <!-- <script src="js/jquery-3.2.1.min.js"></script> -->
-    <!-- <script>window.$ = window.jQuery = require('./js/jquery-3.2.1.min.js')</script> -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
     <script src="js/jquery-3.2.1.min.js"></script>
     <script>if (window.module) module = window.module;</script>
-
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap4.min.js"></script>
     <script src="dist/js/bootstrap-select.js"></script>
-    <!-- Bootstrap Core JavaScript -->
-    <!--<script src="vendor/bootstrap/js/bootstrap.min.js"></script>-->
-    <!-- Metis Menu Plugin JavaScript -->
     <script src="vendor/metisMenu/metisMenu.min.js"></script>
-    <!-- Morris Charts JavaScript -->
-    <!-- <script src="vendor/raphael/raphael.min.js"></script>
-      <script src="vendor/morrisjs/morris.min.js"></script>
-      <script src="data/morris-data.js"></script> -->
-    <script src="vendor/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="vendor/datatables-plugins/dataTables.bootstrap.min.js"></script>
-    <script src="vendor/datatables-responsive/dataTables.responsive.js"></script>
+    <script src="vendor/metisMenu/metisMenu.min.js"></script>
+    <script src="js/jquery.dataTables.min.js"></script>
+    <script src="js/dataTables.bootstrap4.min.js"></script>
+    <script src="js/dataTables.responsive.min.js"></script>
     <script src="js/dataTables.buttons.min.js"></script>
     <!-- Custom Theme JavaScript -->
     <script src="dist/js/sb-admin-2.js"></script>
-    <script type="text/javascript" src="js/bootstrap-datepicker.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap-datepicker.es.min.js"></script>
-    <script src="js/bootstrap-tooltip.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/bootstrap-datepicker.es.min.js"></script>
     <script src="js/jquery.toaster.js"></script>
     <script src="js/bootstrap-select.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+    <script src="js/firebase.js"></script>
     <script src="js/jspdf.debug.js"></script>
     <script>
       // Initialize Firebase
@@ -175,6 +153,12 @@
     <script src="js/moment-with-locales.js"></script>
     <script src="js/jspdf.min.js"></script>
     <script src="js/jspdf.plugin.autotable.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/buttons.bootstrap4.min.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
     <script src="js/localforage.min.js"></script>
     <script src="js/pedidoHistorial.js"></script>
   </body>
