--- a/ofertas.html
+++ b/ofertas.html
@@ -107,7 +107,7 @@
                       <div class="col-md-2">
                         <div class="form-group">
                           <label for="exampleInputPassword1">Consorcio:</label>
-                          <select v-model="consorcio" :value="consorcio" class="form-control" id="consorcio">
+                          <select v-model="consorcio" @change="llenarSelectTienda" class="form-control" id="consorcio">
                             <option selected disabled value="Seleccionar">Seleccionar</option>
                           </select>
                         </div>
@@ -233,10 +233,16 @@
                       <div class="card">
                         <div class="card-body">
                           <div class="card-body">
-                            <h5 class="card-title">Oferta: <span id="claveOferta"></span></h5>
-                            <h6 class="card-subtitle mb-2 text-muted">Consorcio: <span id="consorcioOferta"></span></h6>
-                            <p class="card-text">Cantidad de productos: <span id="cantidadOferta" class="badge badge-danger"></span></p>
-                            <a href="oferta.html?id=" role="button" class="card-link btn btn-outline-info"><span class="fas fa-eye"></span> Ver oferta</a>
+                            <div class="row">
+                              <div class="col">
+                                <h5 class="card-title">Oferta: <span id="claveOferta">{{ oferta.clave }}</span></h5>
+                                <h6 class="card-subtitle mb-2 text-muted">Consorcio: <span id="consorcioOferta">{{oferta.consorcio}}</span></h6>
+                                <p class="card-text">Cantidad de productos: <span id="cantidadOferta" class="badge badge-danger">{{ oferta.productos.length }}</span></p>
+                              </div>
+                              <div class="col">
+                                <a :href="`oferta.html?id=${oferta['.key']}`" role="button" class="card-link btn btn-outline-info"><span class="fas fa-eye"></span> Ver oferta</a>
+                              </div>
+                            </div>
                           </div>
                         </div>
                       </div>
@@ -292,7 +298,7 @@
   <script src="js/jquery.toaster.js"></script>
   <script src="js/bootstrap-select.min.js"></script>
   <script src="js/firebase.js"></script>
-  <script src="js/jspdf.debug.js"></script>
+  <!-- <script src="js/jspdf.debug.js"></script> -->
   <script>
     // Initialize Firebase
     var config = {
@@ -321,6 +327,7 @@
   <script src="js/localforage.min.js"></script>
   <script src="js/Chart.min.js"></script>
   <script src='js/decimal.min.js'></script>
+  <script src="js/sweetalert.min.js"></script>
   <script src="babel/ofertas.js"></script>
   <!-- <script src="js/estadisticasvue.js"></script> -->
 </body>
